compiler2/src/antlr/JinjaHtmlCssParser.java
// Generated from E:/S.F.S/compiler002/compiler001/compiler2/src/antlr/JinjaHtmlCssParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JinjaHtmlCssParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, HTML_COMMENT=2, JINJA_COMMENT=3, STYLE_OPEN=4, HTML_TAG_CLOSE_OPEN=5, 
		HTML_TAG_OPEN=6, JINJA_VAR_START=7, JINJA_BLOCK_START=8, HTML_TEXT=9, 
		TAG_SELF_CLOSE=10, TAG_CLOSE=11, TAG_VOID_NAME=12, TAG_IDENTIFIER=13, 
		TAG_EQUAL=14, TAG_STRING=15, TAG_WS=16, STYLE_CLOSE_IN_CSS=17, CSS_COMMENT=18, 
		CSS_LBRACE=19, CSS_RBRACE=20, CSS_LBRACKET=21, CSS_RBRACKET=22, CSS_LPAREN=23, 
		CSS_RPAREN=24, CSS_COLON=25, CSS_DOUBLECOLON=26, CSS_SEMI=27, CSS_COMMA=28, 
		CSS_DOT=29, CSS_EQUAL=30, CSS_UNIT=31, CSS_NUMBER=32, CSS_STRING=33, CSS_IDENTIFIER=34, 
		CSS_WS=35, CSS_OTHER=36, JINJA_VAR_END=37, JINJA_BLOCK_END=38, JINJA_KEYWORD=39, 
		JINJA_IDENTIFIER=40, JINJA_DOT=41, JINJA_PIPE=42, JINJA_COMMA=43, JINJA_LPAREN=44, 
		JINJA_RPAREN=45, JINJA_LBRACKET=46, JINJA_RBRACKET=47, JINJA_OP=48, JINJA_NUMBER=49, 
		JINJA_STRING=50, JINJA_WS=51, JINJA_ANY=52;
	public static final int
		RULE_document = 0, RULE_node = 1, RULE_styleBlock = 2, RULE_cssContent = 3, 
		RULE_cssToken = 4, RULE_element = 5, RULE_htmlElement = 6, RULE_attribute = 7, 
		RULE_attrName = 8, RULE_attributeValue = 9, RULE_jinjaBlock = 10, RULE_jinjaVar = 11, 
		RULE_jinjaContent = 12, RULE_jinjaToken = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "node", "styleBlock", "cssContent", "cssToken", "element", 
			"htmlElement", "attribute", "attrName", "attributeValue", "jinjaBlock", 
			"jinjaVar", "jinjaContent", "jinjaToken"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'<style>'", "'</'", "'<'", "'{{'", "'{%'", null, 
			"'/>'", "'>'", null, null, null, null, null, "'</style>'", null, "'{'", 
			"'}'", null, null, null, null, "':'", "'::'", "';'", null, null, null, 
			null, null, null, null, null, null, "'}}'", "'%}'", null, null, null, 
			"'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "HTML_COMMENT", "JINJA_COMMENT", "STYLE_OPEN", "HTML_TAG_CLOSE_OPEN", 
			"HTML_TAG_OPEN", "JINJA_VAR_START", "JINJA_BLOCK_START", "HTML_TEXT", 
			"TAG_SELF_CLOSE", "TAG_CLOSE", "TAG_VOID_NAME", "TAG_IDENTIFIER", "TAG_EQUAL", 
			"TAG_STRING", "TAG_WS", "STYLE_CLOSE_IN_CSS", "CSS_COMMENT", "CSS_LBRACE", 
			"CSS_RBRACE", "CSS_LBRACKET", "CSS_RBRACKET", "CSS_LPAREN", "CSS_RPAREN", 
			"CSS_COLON", "CSS_DOUBLECOLON", "CSS_SEMI", "CSS_COMMA", "CSS_DOT", "CSS_EQUAL", 
			"CSS_UNIT", "CSS_NUMBER", "CSS_STRING", "CSS_IDENTIFIER", "CSS_WS", "CSS_OTHER", 
			"JINJA_VAR_END", "JINJA_BLOCK_END", "JINJA_KEYWORD", "JINJA_IDENTIFIER", 
			"JINJA_DOT", "JINJA_PIPE", "JINJA_COMMA", "JINJA_LPAREN", "JINJA_RPAREN", 
			"JINJA_LBRACKET", "JINJA_RBRACKET", "JINJA_OP", "JINJA_NUMBER", "JINJA_STRING", 
			"JINJA_WS", "JINJA_ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JinjaHtmlCssParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JinjaHtmlCssParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
	 
		public DocumentContext() { }
		public void copyFrom(DocumentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DocumentNodeContext extends DocumentContext {
		public TerminalNode EOF() { return getToken(JinjaHtmlCssParser.EOF, 0); }
		public TerminalNode DOCTYPE() { return getToken(JinjaHtmlCssParser.DOCTYPE, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public DocumentNodeContext(DocumentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterDocumentNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitDocumentNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitDocumentNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			_localctx = new DocumentNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOCTYPE) {
				{
				setState(28);
				match(DOCTYPE);
				}
			}

			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 976L) != 0)) {
				{
				{
				setState(31);
				node();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
	 
		public NodeContext() { }
		public void copyFrom(NodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeHtmlTextContext extends NodeContext {
		public TerminalNode HTML_TEXT() { return getToken(JinjaHtmlCssParser.HTML_TEXT, 0); }
		public NodeHtmlTextContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterNodeHtmlText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitNodeHtmlText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitNodeHtmlText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeJinjaVarContext extends NodeContext {
		public JinjaVarContext jinjaVar() {
			return getRuleContext(JinjaVarContext.class,0);
		}
		public NodeJinjaVarContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterNodeJinjaVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitNodeJinjaVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitNodeJinjaVar(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeJinjaBlockContext extends NodeContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public NodeJinjaBlockContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterNodeJinjaBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitNodeJinjaBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitNodeJinjaBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeElementContext extends NodeContext {
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public NodeElementContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterNodeElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitNodeElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitNodeElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NodeStyleBlockContext extends NodeContext {
		public StyleBlockContext styleBlock() {
			return getRuleContext(StyleBlockContext.class,0);
		}
		public NodeStyleBlockContext(NodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterNodeStyleBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitNodeStyleBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitNodeStyleBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_node);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_TAG_OPEN:
				_localctx = new NodeElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				element();
				}
				break;
			case JINJA_BLOCK_START:
				_localctx = new NodeJinjaBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				jinjaBlock();
				}
				break;
			case JINJA_VAR_START:
				_localctx = new NodeJinjaVarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				jinjaVar();
				}
				break;
			case STYLE_OPEN:
				_localctx = new NodeStyleBlockContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(42);
				styleBlock();
				}
				break;
			case HTML_TEXT:
				_localctx = new NodeHtmlTextContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(43);
				match(HTML_TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StyleBlockContext extends ParserRuleContext {
		public StyleBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styleBlock; }
	 
		public StyleBlockContext() { }
		public void copyFrom(StyleBlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleBlockNodeContext extends StyleBlockContext {
		public TerminalNode STYLE_OPEN() { return getToken(JinjaHtmlCssParser.STYLE_OPEN, 0); }
		public CssContentContext cssContent() {
			return getRuleContext(CssContentContext.class,0);
		}
		public TerminalNode STYLE_CLOSE_IN_CSS() { return getToken(JinjaHtmlCssParser.STYLE_CLOSE_IN_CSS, 0); }
		public StyleBlockNodeContext(StyleBlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterStyleBlockNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitStyleBlockNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitStyleBlockNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StyleBlockContext styleBlock() throws RecognitionException {
		StyleBlockContext _localctx = new StyleBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_styleBlock);
		try {
			_localctx = new StyleBlockNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(STYLE_OPEN);
			setState(47);
			cssContent();
			setState(48);
			match(STYLE_CLOSE_IN_CSS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CssContentContext extends ParserRuleContext {
		public CssContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cssContent; }
	 
		public CssContentContext() { }
		public void copyFrom(CssContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssContentNodeContext extends CssContentContext {
		public List<CssTokenContext> cssToken() {
			return getRuleContexts(CssTokenContext.class);
		}
		public CssTokenContext cssToken(int i) {
			return getRuleContext(CssTokenContext.class,i);
		}
		public List<JinjaVarContext> jinjaVar() {
			return getRuleContexts(JinjaVarContext.class);
		}
		public JinjaVarContext jinjaVar(int i) {
			return getRuleContext(JinjaVarContext.class,i);
		}
		public List<JinjaBlockContext> jinjaBlock() {
			return getRuleContexts(JinjaBlockContext.class);
		}
		public JinjaBlockContext jinjaBlock(int i) {
			return getRuleContext(JinjaBlockContext.class,i);
		}
		public CssContentNodeContext(CssContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssContentNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssContentNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssContentNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CssContentContext cssContent() throws RecognitionException {
		CssContentContext _localctx = new CssContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cssContent);
		int _la;
		try {
			_localctx = new CssContentNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 103078691200L) != 0)) {
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CSS_LBRACE:
				case CSS_RBRACE:
				case CSS_LBRACKET:
				case CSS_RBRACKET:
				case CSS_LPAREN:
				case CSS_RPAREN:
				case CSS_COLON:
				case CSS_DOUBLECOLON:
				case CSS_SEMI:
				case CSS_COMMA:
				case CSS_DOT:
				case CSS_EQUAL:
				case CSS_UNIT:
				case CSS_NUMBER:
				case CSS_STRING:
				case CSS_IDENTIFIER:
				case CSS_OTHER:
					{
					setState(50);
					cssToken();
					}
					break;
				case JINJA_VAR_START:
					{
					setState(51);
					jinjaVar();
					}
					break;
				case JINJA_BLOCK_START:
					{
					setState(52);
					jinjaBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CssTokenContext extends ParserRuleContext {
		public CssTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cssToken; }
	 
		public CssTokenContext() { }
		public void copyFrom(CssTokenContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssColonContext extends CssTokenContext {
		public TerminalNode CSS_COLON() { return getToken(JinjaHtmlCssParser.CSS_COLON, 0); }
		public CssColonContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssColon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssColon(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssColon(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssIdentifierContext extends CssTokenContext {
		public TerminalNode CSS_IDENTIFIER() { return getToken(JinjaHtmlCssParser.CSS_IDENTIFIER, 0); }
		public CssIdentifierContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssLParenContext extends CssTokenContext {
		public TerminalNode CSS_LPAREN() { return getToken(JinjaHtmlCssParser.CSS_LPAREN, 0); }
		public CssLParenContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssLParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssLParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssLParen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssStringContext extends CssTokenContext {
		public TerminalNode CSS_STRING() { return getToken(JinjaHtmlCssParser.CSS_STRING, 0); }
		public CssStringContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssString(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssRParenContext extends CssTokenContext {
		public TerminalNode CSS_RPAREN() { return getToken(JinjaHtmlCssParser.CSS_RPAREN, 0); }
		public CssRParenContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssRParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssRParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssRParen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssRBraceContext extends CssTokenContext {
		public TerminalNode CSS_RBRACE() { return getToken(JinjaHtmlCssParser.CSS_RBRACE, 0); }
		public CssRBraceContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssRBrace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssRBrace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssRBrace(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssOtherContext extends CssTokenContext {
		public TerminalNode CSS_OTHER() { return getToken(JinjaHtmlCssParser.CSS_OTHER, 0); }
		public CssOtherContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssOther(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssOther(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssOther(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssLBracketContext extends CssTokenContext {
		public TerminalNode CSS_LBRACKET() { return getToken(JinjaHtmlCssParser.CSS_LBRACKET, 0); }
		public CssLBracketContext(CssTokenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).enterCssLBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JinjaHtmlCssParserListener ) ((JinjaHtmlCssParserListener)listener).exitCssLBracket(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JinjaHtmlCssParserVisitor ) return ((JinjaHtmlCssParserVisitor<? extends T>)visitor).visitCssLBracket(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssSemiContext extends CssTokenContext {
